# qt-gstreamer

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile.in  HACKING  NEWS  README  make_tarballs.sh  qmlpaintervideosurface.cpp  qmlpaintervideosurface.h  qmlvideosurfacegstsink.cpp  qmlvideosurfacegstsink.h  qpaintervideosurface.cpp  qpaintervideosurface.h  qpaintervideosurface_p.h  qvideosurfacegstsink.cpp  qvideosurfacegstsink.h
cmake/modules/: FindGLIB2.cmake  FindGObject.cmake  FindGStreamer.cmake  FindGStreamerPlugins.cmake  FindGStreamerPluginsBase.cmake  FindOpenGLES2.cmake  FindQt4or5.cmake  FindQtGStreamer.cmake  QtHelpers.cmake  (+7 more)
codegen/: CMakeLists.txt  analyzer.l  generator.cpp  generator.h  parser.y  yystype.h
elements/: CMakeLists.txt  gstqwidgetvideosink.cpp
elements/gstqtvideosink/: CMakeLists.txt  abstractsurfacepainter.h  autotest.cpp  bufferformat.cpp  bufferformat.h  genericsurfacepainter.cpp  genericsurfacepainter.h  gstqtglvideosink.cpp  gstqtglvideosink.h  gstqtglvideosinkbase.cpp  gstqtglvideosinkbase.h  gstqtquick2videosink.cpp  gstqtvideosink.cpp  gstqtvideosink.h  gstqtvideosinkbase.cpp  gstqtvideosinkbase.h  gstqtvideosinkplugin.cpp  gstqtvideosinkplugin.h  gstqtvideosinksurface.cpp  gstqtvideosinksurface.h  gstqwidgetvideosink.cpp  gstqwidgetvideosink.h  openglsurfacepainter.cpp  openglsurfacepainter.h  qtvideosinkdelegate.cpp  qtvideosinkdelegate.h  qwidgetvideosinkdelegate.cpp  qwidgetvideosinkdelegate.h  utils.cpp  utils.h
elements/gstqtvideosink/delegates/: basedelegate.cpp  basedelegate.h  qtquick2videosinkdelegate.cpp  qtvideosinkdelegate.cpp  qtvideosinkdelegate.h  qwidgetvideosinkdelegate.cpp  qwidgetvideosinkdelegate.h
elements/gstqtvideosink/painters/: abstractsurfacepainter.h  openglsurfacepainter.cpp  openglsurfacepainter.h  videomaterial.cpp  videonode.cpp  videonode.h
elements/gstqtvideosink/utils/: bufferformat.cpp  bufferformat.h  utils.cpp  utils.h
examples/: CMakeLists.txt  RunExamplesDistCheck.cmake  examples.dox
examples/appsink-src/: CMakeLists.txt  appsink-src.pro  main.cpp
examples/devmon/: CMakeLists.txt  devmon.pro  main.cpp  mainwindow.cpp  mainwindow.h
examples/echo/: CMakeLists.txt  echo.pro  main.cpp
examples/player/: CMakeLists.txt  main.cpp  mediaapp.cpp  mediaapp.h  player.cpp  player.h  player.pro
examples/qmlplayer/: CMakeLists.txt  main.cpp  player.cpp  player.h  qmlplayer.pro  qmlplayer.qml  qmlplayer.qrc
examples/qmlplayer2/: CMakeLists.txt  main.cpp  player.cpp  player.h  qmlplayer2.pro  qmlplayer2.qml  qmlplayer2.qrc
examples/recorder/: CMakeLists.txt  main.cpp  recorder.pro  recorder.ui
examples/voip/: CMakeLists.txt  main.cpp  voip.pro  voip.ui
src/: CMakeLists.txt  main.dox  qgstbin.cpp  qgstbin.h  qgstbus.cpp  qgstbus.h  qgstcaps.cpp  qgstcaps.h  qgstdeclarations.h  qgstelement.cpp  qgstelement.h  qgstelementfactory.cpp  qgstelementfactory.h  qgstghostpad.cpp  qgstghostpad.h  qgstglobal.cpp  qgstglobal.h  qgstmessage.cpp  qgstmessage.h  qgstminiobject.cpp  qgstminiobject.h  qgstobject.cpp  qgstobject.h  qgstpad.cpp  qgstpad.h  qgstpipeline.cpp  qgstpipeline.h  qgststructure.cpp  qgststructure.h  qgstvalue.cpp  qgstvalue.h  qgvalue.cpp  qgvalue.h
src/QGlib/: CMakeLists.txt  Closure  QtGLib-2.0.pc.in  closure.cpp  closure.h  closureimpl_p.h  connect.cpp  connect.h  connectimpl.h  connectimpl_p.h  emitimpl.h  emitimpl_p.h  error.cpp  error.h  gdeclarations.h  gen.cpp  global.h  init.cpp  init.h  object.cpp  object.h  paramspec.cpp  paramspec.h  qglib_signal.h  quark.cpp  quark.h  refpointer.h  signal.cpp  signal.h  signalimpl_p.h  string.cpp  string.h  string_p.h  type.cpp  type.h  value.cpp  value.h  wrap.cpp  wrap.h
src/QGlib/valueimpl/: assert.h  nativetypes.h  objectptr.h  paramspecptr.h  valueimpl.h
src/QGst/: CMakeLists.txt  Memory  PropertyProbe  QtGStreamer-0.10.pc.in  QtGStreamerUi-0.10.pc.in  QtGStreamerUtils-0.10.pc.in  XOverlay  allocator.cpp  allocator.h  bin.cpp  bin.h  buffer.cpp  buffer.h  bufferlist.cpp  bufferlist.h  bus.cpp  bus.h  caps.cpp  caps.h  childproxy.cpp  childproxy.h  clock.cpp  clock.h  clocktime.cpp  clocktime.h  colorbalance.cpp  colorbalance.h  discoverer.cpp  discoverer.h  element.cpp  element.h  elementfactory.cpp  elementfactory.h  enums.h  event.cpp  event.h  gen.cpp  ghostpad.cpp  ghostpad.h  global.cpp  (+45 more)
src/QGst/Quick/: global.h  videosurface.cpp  videosurface.h  videosurface_p.h
src/QGst/Ui/: global.h  graphicsvideosurface.cpp  graphicsvideosurface.h  graphicsvideosurface_p.h  graphicsvideowidget.cpp  graphicsvideowidget.h  videowidget.cpp  videowidget.h
src/QGst/Utils/: applicationsink.cpp  applicationsink.h  applicationsource.cpp  applicationsource.h  global.h
src/interfaces/: qgstxoverlay.cpp  qgstxoverlay.h
src/qml/: CMakeLists.txt  plugin.cpp  qmldir  videoitem.cpp  videoitem.h
src/qml/quick1/: plugin.cpp
src/qml/quick2/: plugin.cpp
tests/: CMakeLists.txt  bustest.cpp  capstest.cpp  childproxytest.cpp  parsetest.cpp  propertiestest.cpp  propertiestest.h  qgsttest.h  refpointertest.cpp  refpointertest.h  signalstest.cpp  signalstest.h  structstest.cpp  structuretest.cpp  structuretest.h  urihandlertest.cpp  valuetest.cpp  valuetest.h
tests/auto/: CMakeLists.txt  allocatortest.cpp  buffertest.cpp  bustest.cpp  capstest.cpp  childproxytest.cpp  clocktest.cpp  discoverertest.cpp  eventtest.cpp  memorytest.cpp  messagetest.cpp  padtest.cpp  parsetest.cpp  propertiestest.cpp  qgsttest.h  qtquick2test.cpp  querytest.cpp  refpointertest.cpp  signalstest.cpp  structstest.cpp  structuretest.cpp  taglisttest.cpp  urihandlertest.cpp  valuetest.cpp  videoitemtest.qml
tests/auto/data/: numbers.ogv
tests/compilation/: CMakeLists.txt  CompilationTests.cmake  CompilationTests_CMakeLists.txt  RunCompilationTests.cmake
tests/manual/: CMakeLists.txt  qwidgetvideosinktest.cpp  qwidgetvideosinktest.ui  videoorientationtest.cpp  videoorientationtest.ui  videowidgetpipelinetest.cpp  videowidgetpipelinetest.ui  videowidgettest.cpp  videowidgettest.ui
tests/qtgstreamertest/: CMakeLists.txt  qtgstreamertest.cpp  qtgstreamertest.h
(+3 files in other folders)
